syntax = "proto3";

package beagle;

/* Request */

message ScreenRequest {
  string name = 1;
  string parameters = 2;
}

/* Response */

message DataContext {
  string id = 1;
  string value = 2;
}

message ViewNode {
  string beagleComponent = 1;
  string id = 2;
  DataContext context = 3;
  repeated ViewNode children = 4;
  ViewNode child = 5;
  string style = 6;
  string attributes = 7;
}
